fix(android): keep SVG data decoding on API 30